# csv-stats-polars-rust

./: Cargo.toml  README.md
src/: main.rs
