[package]
name = "csv-stats-polars-rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
polars = { version = "0.50.0", features = ["lazy", "csv"] }
